# v

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: functions.rs  main.rs  structures.rs  version.rs
src/helpers/: brew.rs  compatibility.rs  mod.rs
src/models/: cli.rs  formulae.rs  mod.rs
