[package]
name = "v"
version = "0.1.0"
authors = ["Bastien <info@bastiennicoud.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
anyhow = "1.0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lenient_semver = "0.3.0"
